Update header and navigation

--- a/assets/css/colors.css
+++ b/assets/css/colors.css
@@ -1,3 +1,12 @@
+/* ***************** 
+ * Tailwind Colors *
+ * *****************
+ * Stone :
+ * Neutral :
+ * Red :
+ * Green : 
+ ******************* /
+
 /* Background Colors */
 
 .bg-platinum {
@@ -17,6 +26,10 @@
 
 .bg-dark-platinum {
     background: #797979;
+}
+
+.bg-ghost {
+    background: #f8f8ff;
 }
 
 /* Text Colors */
@@ -42,3 +55,6 @@
     color: #797979;
 }
 
+.ghost {
+    color: #f8f8ff;
+}
