Update error pages

--- a/assets/css/animations.css
+++ b/assets/css/animations.css
@@ -5,3 +5,16 @@
 .grow:hover {
   transform: scale(1.1);
 }
+
+/* Pulse BG Animation (Skeleton) */
+@keyframes pulse-bg {
+    0% {
+        background-color: #ddd;
+    }
+    50% {
+        background-color: #d0d0d0;
+    }
+    100% {
+        background-color: #ddd;
+    }
+}
