--- a/assets/css/fonts.css
+++ b/assets/css/fonts.css
@@ -34,3 +34,27 @@
 .font-VCR {
     font-family: 'VCR OSD Mono', 'Fragment Mono', 'Lucida Console',  monospace;
 }
+
+/* Headings & Other Text */
+h1 {
+    font-size: 5rem;
+}
+h2 {
+    font-size: 4rem;
+}
+h3 {
+    font-size: 3rem;
+}
+h4 {
+    font-size: 2rem;
+}
+h5 {
+    font-size: 1.75rem;
+}
+h6 {
+    font-size: 1.5rem;
+}
+
+p {
+    font-size: 1.5rem;
+}
